--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Southern States -- Social life and customs -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: Nobody's Child
 url: http://www.gutenberg.org/ebooks/36531
